example with wilds

--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[B1] (32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "import sys \n",
@@ -23,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -50,40 +42,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [3S[7C]\n",
-      "DEBUG: Player J lays down [4S[4D[4H] of type 4\n",
-      "DEBUG: Player J discards 3S leaving [2D[5C[7C[7C[8S[AD[KH[QD[TD]\n",
-      "DEBUG: Player J draws [TC[5D]\n",
-      "DEBUG: Player J discards 8S leaving [2D[5C[5D[7C[7C[AD[KH[QD[TD[TC]\n",
-      "DEBUG: Player J draws [*B[2H]\n",
-      "DEBUG: Player J discards 7C leaving [*B[2D[2H[5C[5D[7C[AD[KH[QD[TD[TC]\n",
-      "DEBUG: Player J draws [KS[9S]\n",
-      "DEBUG: Player J discards 9S leaving [*B[2D[2H[5C[5D[7C[AD[KH[KS[QD[TD[TC]\n",
-      "DEBUG: Player J draws [4D[7H]\n",
+      "DEBUG: Player J draws [5H[JD]\n",
+      "DEBUG: Player J lays down [4D[4H[4S] of type 4\n",
+      "DEBUG: Player J lays down [JH[JC[JD] of type J\n",
+      "DEBUG: Player J discards 3C leaving [2S[2D[2H[5H[AH[QH]\n",
+      "DEBUG: Player J draws [JD[6D]\n",
+      "DEBUG: Player J lays down [JD] of type J\n",
+      "DEBUG: Player J discards 6D leaving [2S[2D[2H[5H[AH[QH]\n",
+      "DEBUG: Player J draws [7S[9C]\n",
+      "DEBUG: Player J discards 9C leaving [2S[2D[2H[5H[7S[AH[QH]\n",
+      "DEBUG: Player J draws [6H[6D]\n",
+      "DEBUG: Player J discards 7S leaving [2S[2D[2H[5H[6H[6D[AH[QH]\n",
+      "DEBUG: Player J draws [6C[AS]\n",
+      "DEBUG: Player J lays down [6H[6D[6C] of type 6\n",
+      "DEBUG: Player J discards 5H leaving [2S[2D[2H[AH[AS[QH]\n",
+      "DEBUG: Player J draws [JH[TC]\n",
+      "DEBUG: Player J lays down [JH] of type J\n",
+      "DEBUG: Player J discards TC leaving [2S[2D[2H[AH[AS[QH]\n",
+      "DEBUG: Player J draws [9H[9C]\n",
+      "DEBUG: Player J laying down with wilds.\n",
+      "DEBUG: Player J lays down [9H[9C[2H] of type 9\n",
+      "DEBUG: Player J lays down [AH[AS[2D] of type A\n",
+      "DEBUG: Player J adding wilds.\n",
+      "DEBUG: Player J lays down card [2S] of type 9\n",
+      "DEBUG: Player J discards QH leaving [Empty]\n",
+      "DEBUG: Player J picks up their foot.\n",
+      "DEBUG: Player J draws [QS[KH]\n",
+      "DEBUG: Player J lays down [3C[3H[3S] of type 3\n",
+      "DEBUG: Player J lays down [4H] of type 4\n",
+      "DEBUG: Player J lays down [6C] of type 6\n",
+      "DEBUG: Player J lays down [AH] of type A\n",
+      "DEBUG: Player J discards 8S leaving [2C[8C[KH[QD[QS[TH]\n",
+      "DEBUG: Player J draws [4D[8S]\n",
       "DEBUG: Player J lays down [4D] of type 4\n",
-      "DEBUG: Player J discards 7H leaving [*B[2D[2H[5C[5D[7C[AD[KH[KS[QD[TD[TC]\n",
-      "DEBUG: Player J draws [9H[5S]\n",
-      "DEBUG: Player J lays down [5C[5D[5S] of type 5\n",
-      "DEBUG: Player J discards 9H leaving [*B[2D[2H[7C[AD[KH[KS[QD[TD[TC]\n",
-      "DEBUG: Player J draws [3D[KC]\n",
-      "DEBUG: Player J lays down [KH[KS[KC] of type K\n",
-      "DEBUG: Player J discards 3D leaving [*B[2D[2H[7C[AD[QD[TD[TC]\n",
-      "DEBUG: Player J draws [4S[JH]\n",
-      "DEBUG: Player J lays down [4S] of type 4\n",
-      "DEBUG: Player J discards 7C leaving [*B[2D[2H[AD[JH[QD[TD[TC]\n",
-      "DEBUG: Player J draws [KH[QC]\n",
-      "DEBUG: Player J lays down [KH] of type K\n",
-      "DEBUG: Player J discards TC leaving [*B[2D[2H[AD[JH[QD[QC[TD]\n",
-      "DEBUG: Player J draws [QC[QS]\n",
-      "DEBUG: Player J lays down [QD[QC[QC[QS] of type Q\n",
-      "DEBUG: Player J discards TD leaving [*B[2D[2H[AD[JH]\n"
+      "DEBUG: Player J discards 8S leaving [2C[8C[KH[QD[QS[TH]\n",
+      "DEBUG: Player J draws [9H[QS]\n",
+      "DEBUG: Player J lays down [9H] of type 9\n",
+      "DEBUG: Player J lays down [QD[QS[QS] of type Q\n",
+      "DEBUG: Player J discards 8C leaving [2C[KH[TH]\n"
      ]
     },
     {
@@ -93,13 +96,13 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [2D[4S[4D[4H[5C[7C[8S[AD[KH[QD[TD]\n",
-      "foot: [B3] (11)\n",
+      "hand: [2S[2D[2H[3C[4D[4H[4S[AH[JH[JC[QH]\n",
+      "foot: [R4] (11)\n",
       "J:\n",
       "complete: \n",
-      "down: [4S[4D[4H[4D[4S]  [5C[5D[5S]  [KH[KS[KC[KH]  [QD[QC[QC[QS]\n",
-      "hand: [*B[2D[2H[AD[JH]\n",
-      "foot: [B3] (11)\n"
+      "down: [4D[4H[4S[4H[4D]  [JH[JC[JD[JD[JH]  [6H[6D[6C[6C]  [9H[9C[2H[2S[9H]  [AH[AS[2D[AH]  [3C[3H[3S]  [QD[QS[QS]\n",
+      "hand: [2C[KH[TH]\n",
+      "foot: [Empty\n"
      ]
     }
    ],
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +161,7 @@
        "    height: 20px;\n",
        "    overflow: visible;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/black_joker.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -170,7 +173,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🃟</span><span style=\"background:white;color:RED\">🃂</span><span style=\"background:white;color:RED\">🂲</span><span style=\"background:white;color:RED\">🃁</span><span style=\"background:white;color:RED\">🂻</span></span>"
+       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🃒</span><span style=\"background:white;color:RED\">🂾</span><span style=\"background:white;color:RED\">🂺</span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -183,7 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[*B[2D[2H[AD[JH]\n"
+      "[2C[KH[TH]\n"
      ]
     }
    ],
@@ -212,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +232,7 @@
        "    width: 70px;\n",
        "    overflow-x: hidden;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/black_joker.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -253,7 +256,7 @@
       "    width: 70px;\n",
       "    overflow-x: hidden;\n",
       "}\n",
-      "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/black_joker.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span></span>\n"
+      "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>\n"
      ]
     }
    ],
@@ -284,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
